--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@astrojs/sitemap": "^3.3.0",
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "^8.1.3",
-    "@fontsource-variable/ibm-plex-sans": "^5.2.5",
-    "@fontsource/ibm-plex-mono": "^5.2.5",
+    "@fontsource-variable/nunito-sans": "^5.2.5",
+    "@fontsource-variable/playfair-display": "^5.2.5",
+    "@fontsource-variable/roboto-mono": "^5.2.5",
+    "@fontsource/ubuntu": "^5.2.5",
     "@keystatic/astro": "^5.0.3",
     "@keystatic/core": "^0.5.39",
     "@types/react": "^18.3.12",
